# badgeblue

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  cliff.toml  create-release.sh  dist.sh
i18n/en/: errors.ftl
i18n/pt-BR/: errors.ftl
playbooks/: development.md  server-setup.md
src/: main.rs
templates/: base.html  index.en.html  index.html  index.pt-br.html  verify.en.html  verify.html  verify.pt-br.html
